this is bacend commit

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div style="width: 40%;margin: 5% auto;border: 1px solid;padding: 2%;">
-        <form action="http://localhost:5000tittle/send" method="POST">
+        <form action="https://obscure-lake-21900.herokuapp.comtittle/send" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Subject-name (like tour-travels, cooking etc.)</label>
                 <input type="text" name="TittleName" class="form-control" id="exampleInputEmail1"
@@ -27,7 +27,7 @@
     </div>
 
     <div style="width: 40%;margin: 5% auto;border: 1px solid;padding: 2%;">
-        <form action="http://localhost:5000subtittle/submit" method="POST">
+        <form action="https://obscure-lake-21900.herokuapp.comsubtittle/submit" method="POST">
             <div class="form-group">
                 <h2>djbjkbsdk</h2>
                 <label for="exampleInputEmail1">Subject-name (like tour-travels, cooking etc.)</label>
@@ -40,7 +40,7 @@
     </div>
 
     <div style="width: 40%;margin: 5% auto;border: 1px solid;padding: 2%;">
-        <form action="http://localhost:5000place/add/" method="POST">
+        <form action="https://obscure-lake-21900.herokuapp.complace/add/" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Subject-name (like tour-travels, cooking etc.)</label>
                 <input type="text" name="subject" class="form-control" id="exampleInputEmail1"/>
